# RTOS_simulator

./: README.md
MPU6050_RTOS_BitDogLab/: CMakeLists.txt  RTOS_leitor_mpu.c
simulador_RTOS/: RTOS_simulator_v1.py  leitor_serial_v3.py  paineis_imu_v2.py
